<resources>
    <string name="app_name">Github Users</string>
    <string name="github_users_app">Github Users App</string>
    <string name="github_logo">Github Logo</string>
    <string name="avatar_user">Avatar User</string>
    <string name="username">Username</string>
    <string name="link_github">Link Github</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="_10">10</string>
    <string name="_15">15</string>
    <string name="_20">20</string>
    <string name="repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vector">Vector</string>
    <string name="image_illustration">Image Illustration</string>
    <string name="nothing_followed">Nothing Followed</string>
    <string name="nothing_following">Nothing Following</string>
    <string name="username_not_found">Username Not Found</string>
    <string name="search">Search</string>
    <string name="change_language_setting">Change Language Setting</string>
    <string name="hint_search">Github Username</string>
    <string name="juanda_esa_putra">Juanda Esa Putra</string>
</resources>